--- a/2/complete/build.gradle
+++ b/2/complete/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'java'
 
-println "PROJECT=" + project.name
-
 repositories { mavenCentral() }
 
 dependencies {
@@ -10,14 +8,19 @@ dependencies {
 	compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
 
 	compile 'org.slf4j:slf4j-api:1.7.5'
-	runtime 'org.slf4j:slf4j-jdk14:1.7.5'
+	runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
 	testCompile 'junit:junit:4.+'
 	testCompile "org.mockito:mockito-all:1.9.5"
 	
-	testCompile 'javax.servlet:servlet-api:2.5'
+	testCompile 'javax.servlet:javax.servlet-api:3.0.1'
 }
-
+test {
+  testLogging {
+    // Show that tests are run in the command-line output
+    events 'started', 'passed'
+  }
+}
 task wrapper(type: Wrapper) { gradleVersion = '1.6' }
 
