--- a/7/complete/build.gradle
+++ b/7/complete/build.gradle
@@ -1,22 +1,20 @@
 apply plugin: 'java'
 
-println "PROJECT=" + project.name
-
 repositories {
   mavenCentral()
+  maven { url "http://repo.springsource.org/milestone" }
 }
 
 dependencies {
 
-  compile 'org.springframework.data:spring-data-mongodb:1.2.3.RELEASE'
   compile 'cglib:cglib:2.2.2'
 
-  compile 'org.springframework:spring-core:3.2.3.RELEASE'
+  compile 'org.springframework:spring-core:4.0.0.M2'
 
   compile 'org.slf4j:slf4j-api:1.7.5'
   runtime 'org.slf4j:slf4j-jdk14:1.7.5'
 
-  testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
+  testCompile 'org.springframework:spring-test:4.0.0.M2'
   testCompile 'junit:junit:4.+'
   testCompile "org.mockito:mockito-all:1.9.5"
 
