--- a/5/complete/build.gradle
+++ b/5/complete/build.gradle
@@ -34,7 +34,9 @@ dependencies {
 	  exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
 	}
 
+  //TODOCUMENT
   compile 'javax.validation:validation-api:1.1.0.Final'
+  compile 'org.hibernate:hibernate-validator:5.0.1.Final'
 
 	compile 'org.springframework:spring-core:3.2.3.RELEASE'
 	compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
@@ -46,10 +48,9 @@ dependencies {
 	compile 'javax.servlet:jstl:1.2'
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-	testCompile 'junit:junit:4.+'
-	testCompile "org.mockito:mockito-all:1.9.5"
-	testCompile "org.hamcrest:hamcrest-core:1.2.1"
-	testCompile "org.hamcrest:hamcrest-library:1.2.1"
+	testCompile 'junit:junit:4.10'
+	testCompile "org.mockito:mockito-core:1.9.5"
+	testCompile "org.hamcrest:hamcrest-library:1.3"
 	
 	provided 'javax.servlet:javax.servlet-api:3.0.1'
 }
