--- a/2/complete/build.gradle
+++ b/2/complete/build.gradle
@@ -11,8 +11,10 @@ dependencies {
 	runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-	testCompile 'junit:junit:4.+'
-	testCompile "org.mockito:mockito-all:1.9.5"
+	
+	testCompile 'junit:junit:4.11'
+	testCompile "org.mockito:mockito-core:1.9.5"
+	testCompile "org.hamcrest:hamcrest-library:1.3"
 	
 	testCompile 'javax.servlet:javax.servlet-api:3.0.1'
 }
