--- a/3/complete/build.gradle
+++ b/3/complete/build.gradle
@@ -41,12 +41,19 @@ dependencies {
 	runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-	testCompile 'junit:junit:4.+'
+	
+	testCompile 'junit:junit:4.11'
 	testCompile "org.mockito:mockito-all:1.9.5"
-	testCompile "org.hamcrest:hamcrest-core:1.2.1"
-	testCompile "org.hamcrest:hamcrest-library:1.2.1"
+	testCompile "org.hamcrest:hamcrest-library:1.3"
 	
 	provided 'javax.servlet:javax.servlet-api:3.0.1'
+}
+
+test {
+  testLogging {
+    // Show that tests are run in the command-line output
+    events 'started', 'passed'
+  }
 }
 
 task wrapper(type: Wrapper) { gradleVersion = '1.6' }
