--- a/6/complete/build.gradle
+++ b/6/complete/build.gradle
@@ -24,11 +24,13 @@ buildscript {
 }
 
 
+//{!begin repos}
 repositories {
   mavenCentral()
-  //TODOCUMENT
+
   maven { url 'http://repo.springsource.org/milestone/'}
 }
+//{!end repos}
 
 dependencies {
 	def tomcatVersion = '7.0.42'
@@ -44,11 +46,11 @@ dependencies {
 	compile 'org.springframework:spring-core:3.2.3.RELEASE'
 	compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
 
-  //TODOCUMENT
+  //{!begin deps}
   compile 'org.springframework.security:spring-security-web:3.2.0.M2'
   compile 'org.springframework.security:spring-security-core:3.2.0.M2'
   compile 'org.springframework.security:spring-security-config:3.2.0.M2'
-
+  //{!end deps}
 
   compile 'org.slf4j:slf4j-api:1.7.5'
 	runtime 'org.slf4j:slf4j-log4j12:1.7.5'
