--- a/5/complete/build.gradle
+++ b/5/complete/build.gradle
@@ -34,9 +34,10 @@ dependencies {
 	  exclude group: 'org.eclipse.jdt.core.compiler', module: 'ecj'
 	}
 
-  //TODOCUMENT
+  //{!begin validation}
   compile 'javax.validation:validation-api:1.1.0.Final'
   compile 'org.hibernate:hibernate-validator:5.0.1.Final'
+  //{!end validation}
 
 	compile 'org.springframework:spring-core:3.2.3.RELEASE'
 	compile 'org.springframework:spring-webmvc:3.2.3.RELEASE'
@@ -48,11 +49,18 @@ dependencies {
 	compile 'javax.servlet:jstl:1.2'
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
-	testCompile 'junit:junit:4.10'
+	testCompile 'junit:junit:4.11'
 	testCompile "org.mockito:mockito-core:1.9.5"
 	testCompile "org.hamcrest:hamcrest-library:1.3"
 	
 	provided 'javax.servlet:javax.servlet-api:3.0.1'
+}
+
+test {
+  testLogging {
+    // Show that tests are run in the command-line output
+    events 'started', 'passed'
+  }
 }
 
 task wrapper(type: Wrapper) { gradleVersion = '1.6' }
