--- a/3/complete/build.gradle
+++ b/3/complete/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'propdeps'
 apply plugin: 'propdeps-maven'
 apply plugin: 'propdeps-idea'
 apply plugin: 'propdeps-eclipse'
+apply plugin: 'eclipse-wtp'
 
 println "PROJECT=" + project.name
 
