--- a/5/complete/build.gradle
+++ b/5/complete/build.gradle
@@ -46,8 +46,7 @@ dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.5'
 	runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 	
-	compile 'opensymphony:sitemesh:2.4.2'
-	compile 'javax.servlet:jstl:1.2'
+  compile 'org.thymeleaf:thymeleaf-spring3:2.0.18'
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
 	testCompile 'junit:junit:4.11'
