--- a/4/complete/build.gradle
+++ b/4/complete/build.gradle
@@ -41,10 +41,9 @@ dependencies {
 	compile 'org.slf4j:slf4j-api:1.7.5'
 	runtime 'org.slf4j:slf4j-log4j12:1.7.5'
 
-  //{!begin sitemesh}
-	compile 'opensymphony:sitemesh:2.4.2'
-  //{!end sitemesh}
-	compile 'javax.servlet:jstl:1.2'
+  //{!begin thymeleaf}
+  compile 'org.thymeleaf:thymeleaf-spring3:2.0.18'
+  //{!end thymeleaf}
 
 	testCompile 'org.springframework:spring-test:3.2.3.RELEASE'
 	
