Fine tune project import settings

--- a/3/complete/build.gradle
+++ b/3/complete/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'propdeps-maven'
 apply plugin: 'propdeps-idea'
 apply plugin: 'propdeps-eclipse'
 apply plugin: 'eclipse-wtp'
+apply plugin: 'idea'
 
 println "PROJECT=" + project.name
 
