--- a/5/complete/build.gradle
+++ b/5/complete/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 	maven {
 	  url "http://download.java.net/maven/2"
 	}
-	maven { url 'http://repo.springsource.org/plugins-release' }
+	maven { url 'http://repo.spring.io/plugins-release' }
   }
 
   dependencies {
